--- a/css/style.css
+++ b/css/style.css
@@ -2,7 +2,8 @@
     box-sizing: border-box;
 }
 body,
-a{
+a,
+button{
     font-family: "Segoe UI", "Noto Sans TC", sans-serif;
     color: #3F5D45;
     font-weight: 400;
@@ -11,6 +12,10 @@ a{
 a{
     text-decoration: none;
     display: block;
+}
+button{
+    cursor: pointer;
+    border: none;
 }
 img{
     display: block;
@@ -146,8 +151,6 @@ img{
     font-size: 24px;
     font-weight: 700;
     background: #EAF0ED;
-    outline: none;
-    border: none;
 }
 .page{
     display: flex;
@@ -188,40 +191,32 @@ img{
     display: flex;
     justify-content: center;
     align-items: center;
+    position: relative;
 }
 .mailIcon{
-    position: relative;
-    display: flex;
-    align-items: center;
-}
-.mailIcon .material-icons{
     font-size: 28px;
     position: absolute;
-    /* 使用.mailIcon{display: flex; align-items: center;}可以讓此Icon上下置中，但使用top: 50%;就會出問題? */
-    /* top: 50%;  */
-    left: 20px;
+    top: 25%; 
+    left: 10px;
 }
 .mailInput{
-    text-indent: 60px;
     border: none;
     outline: none;
     width: 315px;
-    padding: 16px 0;
+    padding: 16px 10px 16px 45px;
     font-size: 24px;
+    line-height: 28px;/*為了與 .mailIcon和 .mail button .material-icons等高 font-size: 28px;*/
 }
 .mail button{
     background-color: #FFE180;
     width: 64px;
     padding: 16px 0;
-    border: none;
-    cursor: pointer;
     display: flex;
     justify-content: center;
     align-items: center;
 }
 .mail button .material-icons{
     font-size: 28px;
-    color: #3F5D45;
 }
 .footer{
     background: #EAF0ED;
@@ -283,14 +278,13 @@ img{
     color: #EAF0ED;
     background: #3F5D45;
 }
-.hamburgerMenu:focus{
+.hamburgerMenu:focus,
+.addToCart:focus,
+.mail button:focus{
     outline: none;
 }
 .mailInput:focus{
     background-color: #EAF0ED;
-}
-.mail button:focus{
-    outline: none;
 }
 .cart:hover span{
     transition: transform 0.5s;
@@ -413,6 +407,15 @@ img{
 @media(max-width: 568px){
     .header{
         margin-bottom: 10px;
+    }
+    .hamburgerMenu{
+        width: 20%;
+        padding: 10px 0;
+    }
+    .cart{
+        width: 20%;
+        padding: 10px 0;
+        text-align: center;
     }
     .banner{
         margin-bottom: 20px;
